--- a/src/pug/base/footer.pug
+++ b/src/pug/base/footer.pug
@@ -2,7 +2,7 @@ footer.footer
   .container
     .row
       .col-sm-12
-        .d-sm-flex.justify-content-between.p-5
+        .d-sm-flex.justify-content-between.px-3.py-5
           .footer-list-w
             ul.footer-list.mr-5
               li.footer-list__item
@@ -38,7 +38,7 @@ footer.footer
                 h2.footer-text
                   | standard post
 
-          .footer-mainactions-w
+          .footer-mainactions-w.mt-4.mt-sm-0
             h2.footer-heading
               | Zest Fitness Centres
 
