--- a/src/pug/layouts/home/bmi.pug
+++ b/src/pug/layouts/home/bmi.pug
@@ -15,12 +15,12 @@ section.bmi-section.bg-gradient
                   .row
                     .col-sm-12
                       p.bmi-label Height in Ft/in
-                    .col-sm-6
+                    .col-sm-6.mb-4.mb-sm-0
                       input#feet.input-field.input-field--small(name="feet" placeholder="feet" required)
                     .col-sm-6
                       input#Inch.input-field.input-field--small(name="Inch" placeholder="inch" required)
 
-                .col-sm-6
+                .col-sm-6.mt-5.mt-sm-0
                   .row
                     .col-sm-12
                       p.bmi-label Weight in lbs
@@ -30,7 +30,7 @@ section.bmi-section.bg-gradient
                   button(type="submit").button.button--primary
                     | Calculate BMI
 
-            .col-sm-5.text-center
+            .col-sm-5.text-center.mt-4.mt-sm-0
               p.bmi-title
                 | Your
                 span.mx-2 BMI
