--- a/src/pug/layouts/home/events.pug
+++ b/src/pug/layouts/home/events.pug
@@ -10,7 +10,7 @@ section.events-section
           p.section-desc.b9 Be the first! Be the winner!
           h2.section-heading
             | Upcoming
-            span.mr-2 Events
+            span.mx-2 Events
 
           ul.event-list
             li.event-list__event.event-list__event--blue
