--- a/src/pug/layouts/home/fitness.pug
+++ b/src/pug/layouts/home/fitness.pug
@@ -2,7 +2,7 @@ section.fitness-section
   .container
     .row
 
-      .col-sm-6
+      .col-sm-6.mb-5.mb-sm-0
         img.img-fluid(src="./img/fitness-bgimg.png" alt="fitness")
 
       .col-sm-6
