--- a/src/pug/layouts/home/testimonial.pug
+++ b/src/pug/layouts/home/testimonial.pug
@@ -6,18 +6,20 @@ section.testimonial-section
 
           ul.testimonial-slider
             li.testimonial-slider__slide
-              .testimony
-                .testimony__img-w
-                  img(src="./img/testimony.png" alt="testimony")
-                .testimony__content-w
-                  blockquote.testimony__quote
-                    | Two-day workshop and the toughest, but most exciting competition on the US calendar!  Online qualifiers start...
-                  h4.testimony__name Jhone Doe
-                  p.testimony__designation CEO & Founder
+              .testimony.row
+                .col-sm-6
+                  .testimony__img-w
+                    img.img-fluid(src="./img/testimony.png" alt="testimony")
+                .col-sm-6
+                  .testimony__content-w
+                    blockquote.testimony__quote
+                      | Two-day workshop and the toughest, but most exciting competition on the US calendar!  Online qualifiers start...
+                    h4.testimony__name Jhone Doe
+                    p.testimony__designation CEO & Founder
             li.testimonial-slider__slide
               .testimony
                 .testimony__img-w
-                  img(src="./img/testimony.png" alt="testimony")
+                  img.img-fluid(src="./img/testimony.png" alt="testimony")
                 .testimony__content-w
                   blockquote.testimony__quote
                     | Two-day workshop and the toughest, but most exciting competition on the US calendar!  Online qualifiers start...
