--- a/src/css/2-layouts/home/events.scss
+++ b/src/css/2-layouts/home/events.scss
@@ -67,9 +67,13 @@
   flex-wrap: wrap;
 
   &__event {
-    flex: 0 1 45%;
-    display: flex;
-    margin: 0 30px 0 0;
+    margin: 0 0 30px 0;
+
+    @media (min-width: $sm) {
+      flex: 0 1 45%;
+      display: flex;
+      margin: 0 30px 0 0;
+    }
 
     &--blue {
       .event__date {
