--- a/src/css/2-layouts/home/fitness.scss
+++ b/src/css/2-layouts/home/fitness.scss
@@ -19,12 +19,12 @@
 
   li {
     flex: 0 1 25%;
-    margin-right: 25px;
+    margin: 0 25px 25px 0;
     text-align: center;
 
     @media (min-width: $sm) {
       flex: 0 1 50%;
-      margin-right: 50px;
+      margin: 0 50px 0 0;
     }
 
     @media (min-width: $lg) {
@@ -136,6 +136,7 @@
   padding: 30px;
   background: url('../img/offer-bgimg.png') no-repeat;
   background-size: cover;
+  background-position: center center;
 
   @media (min-width: $sm) {
     padding: 60px;
