--- a/src/css/2-layouts/home/schedule.scss
+++ b/src/css/2-layouts/home/schedule.scss
@@ -21,10 +21,12 @@
   justify-content: center;
 
   &__item {
-    margin: 0 30px 30px 0;
+    margin: 0 0 30px 0;
+    width: 100%;
 
     @media (min-width: $sm) {
       flex: 0 1 50%;
+      margin: 0 30px 30px 0;
     }
 
     @media (min-width: $md) {
