--- a/src/css/3-components/banner.scss
+++ b/src/css/3-components/banner.scss
@@ -5,6 +5,7 @@
   background-color: $b0;
   min-height: 400px;
   height: 100vh;
+  overflow: hidden;
 
   @media (min-width: $sm) {
     height: 550px;
@@ -24,12 +25,30 @@
     }
   }
 
+  &--about {
+    @media (min-width: $sm) {
+      height: 600px;
+    }
+
+    @media (min-width: $md) {
+      height: 650px;
+    }
+
+    @media (min-width: 1200px) {
+      height: 900px;
+    }
+  }
+
   &__bgimg {
     position: absolute;
-    bottom: 0;
-    right: 0;
+    bottom: -30px;
+    right: -50%;
     height: 100%;
     width: auto;
+
+    @media (min-width: $sm) {
+      right: 0;
+    }
   }
 }
 
@@ -76,4 +95,64 @@
   letter-spacing: 3.6px;
   color: $w;
   opacity: 0.7;
+}
+
+.about-banner-bgimg2 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 500px;
+  opacity: 0.5;
+  width: 300px;
+
+  @media (min-width: $sm) {
+    width: 430px;
+  }
+
+  @media (min-width: $md) {
+    width: 560px;
+  }
+
+  &.athlete {
+    opacity: 1;
+    z-index: 20;
+    width: 150px;
+
+    @media (min-width: $sm) {
+      width: 280px;
+    }
+
+    @media (min-width: $md) {
+      width: 370px;
+    }
+  }
+}
+
+.banner-content-details {
+  position: relative;
+}
+
+.banner-content-heading {
+  color: $w;
+  font-family: $roboto;
+  font-size: 50px;
+  font-weight: 700;
+  font-style: italic;
+  text-transform: uppercase;
+  letter-spacing: 6.6px;
+  z-index: 10;
+  position: relative;
+
+  @media (min-width: $sm) {
+    font-size: 100px;
+  }
+
+  @media (min-width: $md) {
+    font-size: 150px;
+  }
+
+  @media (min-width: $lg) {
+    font-size: 200px;
+  }
 }
