--- a/src/pug/base/header.pug
+++ b/src/pug/base/header.pug
@@ -2,12 +2,12 @@ header.header
   nav.navbar.navbar-expand-md.d-flex.align-items-center.justify-content-between
     a.navbar-brand(href='index.html')
       img.navbar-logo(src="./img/logo.png" alt="logo")
-    ul.navbar-nav
+    ul.navbar-nav.d-none.d-sm-flex
         li.nav-item.active
             a.nav-link(href='index.html')
               | Home
         li.nav-item
-            a.nav-link(href='javascript:void(0);')
+            a.nav-link(href='about.html')
               | About us
         li.nav-item
             a.nav-link(href='javascript:void(0);')
